# program-it

./: .gitignore  Dockerfile  README.md  ideas.md  pyproject.toml  requirements.txt
programit/: celerybeat-schedule  db.sqlite3  requirements.txt
programit/core/: asgi.py  forms.py  settings.py  urls.py  views.py
programit/main/: admin.py  models.py  tasks.py  time_model.py  views.py  work_time.py
programit/main/celery_tasks/: tasks.py
programit/main/migrations/: 0001_initial.py  0002_remove_time_duration_alter_time_start_time.py  0003_time_category.py  0004_time_user.py  0005_alter_time_stop_time.py  0006_delete_time.py  0007_initial.py  0008_worktime_date.py  0009_remove_time_duration_time_created_at_time_end_time_and_more.py  0010_alter_time_created_at_alter_time_end_time_and_more.py  0011_alter_time_options_alter_time_created_at_and_more.py  0012_remove_time_created_at_alter_time_end_time_and_more.py  0013_alter_time_options.py  0013_time_duration_alter_time_end_time_and_more.py  0014_alter_time_options_remove_time_category_category.py  0014_time_points.py  0015_time_is_active.py  0016_profilemodel.py  0017_profilemodel_user.py  0018_alter_profilemodel_github_username.py  0019_profilemodel_points.py  0020_profilemodel_avatar_url.py  0021_backlog.py
programit/main/models/: __init__.py  backlog_model.py  profile_model.py  scores.py  time_model.py  work_time.py
programit/main/templatetags/: filters.py
programit/templates/: base.html  home.html  login.html  profile.html  register.html  start_timer.html  stats.html  timer_list.html  work.html
(+3 files in other folders)
