[project]
name = "programit"
version = "0.1.0"
description = "Web app"
readme = "README.md"
dependencies = [
    "asgiref==3.9.1",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "django==5.2.5",
    "djangorestframework==3.16.1",
    "flask==3.1.2",
    "fonttools==4.56.0",
    "h11==0.16.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "kiwisolver==1.4.8",
    "lxml==6.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "mouseinfo==0.1.3",
    "numpy==2.2.2",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "pillow==11.1.0",
    "pyautogui==0.9.54",
    "pycparser==2.22",
    "pygetwindow==0.0.9",
    "pymsgbox==1.0.9",
    "pyparsing==3.2.1",
    "pyperclip==1.9.0",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytweening==1.2.0",
    "pywhatkit==5.4",
    "requests==2.32.4",
    "schedule==1.2.2",
    "selenium==4.35.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.7",
    "sqlparse==0.5.3",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "websocket-client==1.8.0",
    "werkzeug==3.1.3",
    "wikipedia==1.4.0",
    "wsproto==1.2.0",
]
